--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-cards"] 
   path = themes/hugo-cards
-  url = git://bul-ikana/hugo-cards/
+  url = https://github.com/bul-ikana/hugo-cards.git
