--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.journaldungeek.com/"
 title = "Journal d'un Geek"
 languageCode = "fr"
-paginate = 10
+paginate = 8
 theme = "binario"
 googleAnalytics = "UA-141879724-1" # Enable Google Analytics by entering your tracking id
 
@@ -12,6 +12,7 @@ googleAnalytics = "UA-141879724-1" # Enable Google Analytics by entering your tr
   twitter_cards = true # Enable Twitter Cards if true
   columns = 2
   mainSections = ["posts"]
+  mainMenuAlignment = "right" # Align main menu (desktop version) to the right side
   dateFormat = "January 02, 2006"
 
 [Params.Social]
